--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_core: ^2.21.0
   lottie: ^2.7.0
   google_fonts: ^6.1.0
+  pinput: ^3.0.1
+  firebase_auth: ^4.12.1
 
 dev_dependencies:
   flutter_test:
